maze.pledge.PledgeMaze.scala.error
Compilation error:
PledgeMaze:17: error: expected class or object definition
def suivremur(){
^PledgeMaze:23: error: expected class or object definition
def mur(){
^PledgeMaze:32: error: expected class or object definition
def murNord():Boolean={
^PledgeMaze:38: error: Unmatched closing brace '}' ignored here
}
^